--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -75,12 +75,27 @@
 :root, :root[data-theme=base] {
   // === UNSORTED ==============================================================
 
+  --theme-color-base: 219 15 17; // 900
   --body-bg-color: var(--bg-950);
   --site-bg-color: var(--bg-900);
   --paragraph-spacing: 1.5rem;
   --placeholder-background: var(--bg-950);
   --kbd-background: var(--bg-900);
   --infobox-background: var(--bg-900);
+  --read-ribbon-background: var(--bg-50);
+  --read-ribbon-color: var(--fg-inverted);
+  --read-ribbon-box-shadow: 0 0 2px rgb(0 0 0 / 30%);
+  --spoiler-background: var(--fg-700);
+  --spoiler-color-visible: var(--fg-inverted);
+  --code-background: rgb(0 0 0 / 25%);
+  --code-background-inline: rgb(0 0 0 / 25%);
+  --code-color: var(--fg-700);
+  --ins-background: var(--success-400);
+  --ins-color: var(--fg-inverted);
+  --del-background: var(--warning-400);
+  --del-color: var(--fg-inverted);
+  --text-shadow: -1px -1px 1px rgb(0 0 0 / 12%);
+  --checkmark-not-checked: var(--bg-950);
 
   // === CONTENT LISTS =========================================================
 
@@ -109,22 +124,24 @@
   //   hsl(var(--bg-800-free) / 0) 90%
   // );
 
-  // === PRIMARY ===============================================================
+  // === COLORS ================================================================
 
   --primary-400: hsl(46deg 87% 75%);
   --primary-500: hsl(44deg 86% 70%);
   --primary-600: hsl(34deg 82% 70%);
 
-  // === BACKGROUNDS ===========================================================
+  --success-400: #9bd443;
+  --success-500: #78994d;
 
-  // --bg-50-free: #{hsl_code_free(222, 12, 80)};
-  // --bg-100-free: #{hsl_code_free(222, 12, 66)};
-  // --bg-200-free: #{hsl_code_free(222, 12, 50)};
+  --warning-400: #f96c6c;
+  --warning-500: #f15555;
+  --warning-600: #db4646;
+
+  // === BACKGROUNDS ===========================================================
 
   --bg-50-free: #{hsl_code_free(222, 12, 80)};
   --bg-100-free: #{hsl_code_free(222, 12, 68)};
   --bg-200-free: #{hsl_code_free(222, 12, 54)};
-
   --bg-300-free: #{hsl_code_free(222, 12, 38)};
   --bg-400-free: #{hsl_code_free(222, 13, 31)};
   --bg-500-free: #{hsl_code_free(222, 13, 26.5)};
@@ -146,38 +163,12 @@
   --bg-900: hsl(var(--bg-900-free)); // site, card footer, card overlay, input color-mix
   --bg-950: hsl(var(--bg-950-free)); // body, placeholder
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   // === FOREGROUNDS ===========================================================
 
   &,
   .chapter-formatting {
     // Needs to be repeated to force recalculation in chapters
     // Contrast vs bg-700
-
-    // --fg-100: #{hsl_font_code(220, 10, 88)}; // Contrast ~ 9.9, #dddfe3
-    // --fg-200: #{hsl_font_code(223, 11, 84)}; // Contrast ~ 8.9, #d2d4db
-    // --fg-300: #{hsl_font_code(224, 11, 79)}; // Contrast ~ 7.8, #c4c7cf
-    // --fg-400: #{hsl_font_code(221, 13, 74)}; // Contrast ~ 6.8, #b4bac5
-    // --fg-500: #{hsl_font_code(222, 14, 69)}; // Contrast ~ 5.8, #a5acbb
-    // --fg-600: #{hsl_font_code(222, 13, 65)}; // Contrast ~ 5.1, #9aa1b1
-    // --fg-700: #{hsl_font_code(221, 12, 62)}; // Contrast ~ 4.7, #929aaa
-    // --fg-800: #{hsl_font_code(221, 10, 61)}; // Contrast ~ 4.56, #9298a5
-    // --fg-900: #{hsl_font_code(223, 10, 52)}; // Contrast ~ 3.3, #787f91
-    // --fg-1000: #{hsl_font_code(220, 10, 8)}; // Contrast ~ 1.4, #121416
-    // --fg-tinted: #{hsl_font_code(222, 12, 68)}; // Contrast ~ 5.6, #a4a9b7
 
     --fg-100: #{hsl_font_code(220, 39, 93)}; // Contrast ratio vs bg-700 ~ 11
     --fg-200: #{hsl_font_code(223, 20, 89)}; // Contrast ratio vs bg-700 ~ 10.06
@@ -250,13 +241,13 @@
   --card-content-li-background: var(--card-content-li-background-gradient);
   --card-content-li-background-full: var(--bg-700);
   --card-content-li-background-gradient: linear-gradient(to left, var(--bg-700) 50%, transparent 90%);
-  --card-label-font-weight: 600;
   --card-label-color: var(--fg-inverted);
   --card-label-background: var(--fg-500);
   --card-unavailable-filter: grayscale(0.5);
+  --card-box-shadow: var(--box-shadow-m);
 
   // === UNSORTED ==============================================================
-  // --theme-color-base: 222 15 17; // 900
+
   // --disabled-pattern: rgb(0 0 0 / 8%) repeating-linear-gradient(-45deg, rgb(0 0 0 / 8%), rgb(0 0 0 / 8%) 2px, transparent 2px, transparent 5px);
   // --disabled-embed-background: var(--disabled-pattern);
   // --progress-bar-background: var(--navigation-background);
@@ -264,24 +255,17 @@
   // --media-button-color: var(--fg-600);
   // --media-button-color-hover: var(--fg-500);
   // --tax-cloud-current: var(--primary-500);
-  // --checkmark-not-checked: var(--e-body);
 
-  // --spoiler-background: var(--fg-600);
-  // --spoiler-text-visible: #060606;
-  // --ins-background: #7ebb4e;
-  // --ins-color: var(--fg-1000);
-  // --del-background: #f66055;
-  // --del-color: var(--fg-1000);
+
+
+
+
+
+
   // --skeleton-shape-color: var(--fg-800);
   // --skeleton-cutout-color: var(--e-1);
   // --icon-text-font: inherit;
-  // --code-background: var(--bg-900);
-  // --code-background-inline: rgb(0 0 0 / 15%);
-  // --code-color: var(--fg-800);
-  // --warning: #f66055;
-  // --warning-caption: #fff;
-  // --success: #7ebb4e;
-  // --success-caption: #fff;
+
   // --invert-filter: invert(0);
   // --red: #ef4d4d;
   // --litrpg-bg: var(--fg-400);
@@ -356,6 +340,12 @@
   // --caption-overlay-shadow: linear-gradient(0deg, rgb(0 0 0 / 70%), rgb(0 0 0 / 30%) 70%, transparent);
   // --embed-box-shadow: 0 0 2px rgb(0 0 0 / 30%);
 
+  --box-shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 10%);
+  --box-shadow-s: 0 1px 3px 0 rgb(0 0 0 / 12%), 0 1px 2px -1px rgb(0 0 0 / 10%);
+  --box-shadow: 0 3px 6px -1px rgb(0 0 0 / 9%), 0 -1px 4px -2px rgb(0 0 0 / 10%);
+  --box-shadow-m: rgb(0 0 0 / 15%) 0px 2px 5px 0px, rgb(0 0 0 / 5%) 0px 1px 1px 0px;
+  --box-shadow-l: rgb(0 0 0 / 10%) 0px 6px 12px -2px, rgb(0 0 0 / 15%) 0px 3px 7px -3px;
+
   // === MOBILE MENU ===========================================================
   // --mobile-menu-background: var(--e-1);
   // --mobile-menu-advanced-background: var(--e-body);
@@ -369,7 +359,6 @@
 
   // === CONTENT ===============================================================
   // --blockquote-background: rgb(0 0 0 / 15%);
-  // --text-shadow: -1px -1px 1px rgb(0 0 0 / 12%);
 
   // === TABLES ================================================================
   // --table-border-color: var(--fg-900);
@@ -386,7 +375,8 @@
   --font-weight-heading: 600;
   --font-weight-badge: 600;
   --font-weight-post-meta: 300;
-  --font-weight-ribbon: 600;
+  --font-weight-read-ribbon: 600;
+  --font-weight-card-label: 600;
   --font-weight-navigation: 400;
   --font-line-height-base: 1.7;
   --font-letter-spacing-base: 0.01em;
@@ -409,19 +399,17 @@
   --fs-ds: #{get_clamp(13, 14, 400, 768)};
 
   // === COLORS - HEADING LINKS ================================================
-  // --heading-link: var(--fg-400);
-  // --heading-link-hover: var(--fg-200);
+
+  --heading-link-color: var(--fg-400);
+  --heading-link-color-hover: var(--fg-200);
 
   // === COLORS - INLINE LINKS =================================================
-  // --inline-link: var(--primary-500);
-  // --inline-link-hover: var(--primary-400);
-  // --inline-link-visited: var(--primary-600);
-  // --inline-link-border: 1px solid transparent;
-  // --inline-link-border-hover: 1px solid currentColor;
 
-  // === COLORS - STORY LINKS ==================================================
-  // --story-link: var(--fg-400);
-  // --story-link-hover: var(--fg-200);
+  --inline-link-color: var(--primary-500);
+  --inline-link-color-hover: var(--primary-400);
+  --inline-link-color-visited: var(--primary-600);
+  --inline-link-color-border: 1px solid transparent;
+  --inline-link-color-border-hover: 1px solid currentColor;
 
   // === COLORS - BOOKMARKS ====================================================
   // --bookmark-color-alpha: var(--fg-900);
@@ -467,6 +455,13 @@
   --button-secondary-border-hover: 1px solid var(--bg-200);
   --button-secondary-border-disabled: 1px solid var(--bg-300);
 
+  // === BUTTONS - WARNING ======================================================
+
+  --button-warning-background: var(--warning-500);
+  --button-warning-background-hover: var(--warning-600);
+  --button-warning-color: #fff;
+  --button-warning-color-hover: #fff;
+
   // === BUTTONS - QUICK =======================================================
   // --button-quick-background: var(--bg-500);
   // --button-quick-background-hover: var(--bg-300);
@@ -509,10 +504,25 @@
   --popup-menu-color: var(--fg-inverted);
   --popup-menu-color-hover: var(--fg-inverted);
 
+  // === MICRO MENU ============================================================
+
+  --micro-menu-background: var(--bg-950);
+  --micro-menu-color: var(--fg-400);
+  --micro-menu-color-hover: var(--fg-200);
+  --micro-menu-box-shadow: var(--box-shadow-l);
+
   // === TOOLTIPS/NOTIFICATIONS ================================================
 
   --tooltip-background: var(--bg-50);
   --tooltip-text: var(--fg-inverted);
+
+  --notice-default-background: var(--bg-50);
+  --notice-default-color: var(--fg-inverted);
+  --notice-warning-background: var(--warning-500);
+  --notice-warning-color: #fff;
+  --notice-success-background: var(--success-500);
+  --notice-success-color: #fff;
+  --notice-box-shadow: var(--box-shadow-l);
 
   // === COMMENTS ==============================================================
 
@@ -529,9 +539,10 @@
   --load-comments-color-hover: var(--fg-700);
 
   // === SYSTEM ================================================================
+
   --transition-duration: .2s;
-  // --text-selection-background: rgb(255 255 255 / 20%);
-  // --text-selection-color: var(--fg-200);
+  --text-selection-background: rgb(255 255 255 / 20%);
+  --text-selection-color: var(--fg-100);
 
   // === SCROLL BARS ===========================================================
   // --scrollbar-background: rgb(0 0 0 / 20%);
@@ -553,26 +564,15 @@
   // --badge-override-background: var(--bg-300);
 
   // === SCOPES ================================================================
-  .follow-notifications {
-    // --follow-title-color: var(--fg-300);
-    // --follow-meta-color: var(--fg-600);
-  }
 
   .consent-banner {
-    // --consent-banner-text: var(--fg-500);
-    // --consent-banner-background: var(--e-overlay);
-  }
-
-  .micro-menu {
-    // --micro-menu-background: var(--e-overlay);
-    // --micro-menu-text: var(--fg-400);
-    // --micro-menu-text-hover: var(--fg-200);
-    // --micro-menu-box-shadow: 0 0 8px 2px rgb(0 0 0 / 30%);
+    --consent-banner-text: var(--fg-600);
+    --consent-banner-background: var(--bg-950);
   }
 
   .selected-paragraph {
-    // --paragraph-selection-background: rgb(255 255 255 / 10%);
-    // --paragraph-tools-filter: drop-shadow(0 -3px 6px rgb(0 0 0 / 30%));
+    --paragraph-selection-background: rgb(255 255 255 / 10%);
+    --paragraph-tools-filter: drop-shadow(0 1px 4px rgb(0 0 0 / 33%));
     // --button-bookmark-background-active: var(--primary-500);
   }
 
@@ -621,14 +621,6 @@
     // --tag-warning-background: rgb(246 96 85 / 5%);
     // --tag-warning-background-hover: rgb(246 96 85 / 50%);
   }
-
-  .ribbon {
-    // --ribbon-background: var(--fg-400);
-    // --ribbon-text: var(--fg-1000);
-    // --ribbon-background-read: var(--fg-400);
-    // --ribbon-text-read: var(--fg-1000);
-    // --ribbon-box-shadow: 0 0 2px rgb(0 0 0 / 30%);
-  }
 }
 
 :root.minimal,
@@ -654,7 +646,8 @@
   --font-weight-heading: 700;
   --font-weight-badge: 600;
   --font-weight-post-meta: 400;
-  --font-weight-ribbon: 700;
+  --font-weight-read-ribbon: 700;
+  --font-weight-card-label: 600;
   --font-weight-navigation: 400;
   --font-letter-spacing-base: 0em; // Unit is required!
 }
@@ -666,6 +659,6 @@
   --font-weight-heading: 600;
   --font-weight-badge: 600;
   --font-weight-post-meta: 300;
-  --font-weight-ribbon: 500;
+  --font-weight-read-ribbon: 500;
   --font-weight-navigation: 400;
 }
