--- a/src/scss/_chapter.scss
+++ b/src/scss/_chapter.scss
@@ -260,7 +260,7 @@
   }
 
   &__warning.infobox {
-    color: var(--warning-400);
+    color: var(--red-400);
     font-weight: var(--font-weight-medium);
 
     p {
