--- a/src/scss/_recommendation.scss
+++ b/src/scss/_recommendation.scss
@@ -21,7 +21,7 @@
 
     &-image {
       width: inherit;
-      filter: var(--figure-drop-shadow);
+      box-shadow: var(--recommendation-cover-box-shadow, var(--box-shadow-xl));
 
       @media (max-width: 768px) {
         height: auto;
