--- a/src/scss/_minimal.scss
+++ b/src/scss/_minimal.scss
@@ -2,15 +2,27 @@
   body {
     --text-shadow: none;
     --mobile-menu-text-shadow: none;
-    --floating-shadow: none;
     --container-drop-shadow: none;
-    --figure-drop-shadow: none;
     --paragraph-tools-filter: none;
     --content-li-background: var(--content-li-background-full);
     --story-blog-li-background: var(--content-li-background-full);
     --chapter-li-background: var(--content-li-background-full);
     --card-content-li-background: var(--card-content-li-background-full);
     --embed-box-shadow: var(--minimal-container-box-shadow);
+
+    // --box-shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    // --box-shadow-s: 0 1px 3px 0 rgb(0 0 0 / 12%), 0 1px 2px -1px rgb(0 0 0 / 10%);
+    // --box-shadow: 0 3px 6px -1px rgb(0 0 0 / 9%), 0 -1px 4px -2px rgb(0 0 0 / 10%);
+    // --box-shadow-m: rgb(0 0 0 / 15%) 0px 2px 5px 0px, rgb(0 0 0 / 5%) 0px 1px 1px 0px;
+    // --box-shadow-l: rgb(0 0 0 / 10%) 0px 6px 12px -2px, rgb(0 0 0 / 15%) 0px 3px 7px -3px;
+    // --box-shadow-xl: 0 3px 8px -1px rgb(0 0 0 / 9%), 0 3px 12px -1px rgb(0 0 0 / 17%);
+
+    // --drop-shadow-xs: drop-shadow(0 1px 2px rgb(0 0 0 / 10%));
+    // --drop-shadow-s: drop-shadow(0 1px 3px rgb(0 0 0 / 12%)) drop-shadow(0 1px 2px rgb(0 0 0 / 10%));
+    // --drop-shadow: drop-shadow(0 2px 6px rgb(0 0 0 / 9%)) drop-shadow(0 -1px 3px rgb(0 0 0 / 10%));
+    // --drop-shadow-m: drop-shadow(0 2px 5px rgb(0 0 0 / 15%)) drop-shadow(0 1px 1px rgb(0 0 0 / 5%));
+    // --drop-shadow-l: drop-shadow(0 5px 11px rgb(0 0 0 / 10%)) drop-shadow(0 2px 6px rgb(0 0 0 / 15%));
+    // --drop-shadow-xl: drop-shadow(0 3px 8px rgb(0 0 0 / 9%)) drop-shadow(0 3px 12px rgb(0 0 0 / 17%));
   }
 
   .custom-background {
