--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -571,7 +571,7 @@
   }
 
   &__replied-to {
-    margin-bottom: .25rem;
+    margin-bottom: .5rem;
 
     summary {
       font-style: italic;
@@ -593,7 +593,7 @@
     padding: .75rem;
     border-radius: 2px;
     margin: .5rem 0 .75rem;
-    box-shadow: 0 0 1px 0 var(--e-1);
+    box-shadow: 0 0 0 1px var(--page-bg-color);
   }
 
   > :is(ol, ul) {
@@ -692,7 +692,7 @@
     }
 
     &.on {
-      color: var(--warning-400);
+      color: var(--red-400);
     }
   }
 
