--- a/src/scss/common/_fullscreen.scss
+++ b/src/scss/common/_fullscreen.scss
@@ -8,7 +8,7 @@
   }
 
   .site {
-    background: var(--e-fullscreen) !important;
+    background: var(--fullscreen-background) !important;
   }
 
   .progress {
@@ -29,9 +29,13 @@
     filter: none;
 
     &__background {
-      background: var(--e-fullscreen) !important;
+      background: var(--fullscreen-background) !important;
       box-shadow: none !important;
       filter: none !important;
+
+      &::before {
+        content: none !important;
+      }
     }
   }
 
