--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -78,24 +78,56 @@
   --theme-color-base: 219 15 17; // 900
   --body-bg-color: var(--bg-950);
   --site-bg-color: var(--bg-900);
-  --paragraph-spacing: 1.5rem;
-  --placeholder-background: var(--bg-950);
-  --kbd-background: var(--bg-900);
-  --infobox-background: var(--bg-900);
+  --fullscreen-background: var(--page-bg-color);
+
   --read-ribbon-background: var(--bg-50);
   --read-ribbon-color: var(--fg-inverted);
   --read-ribbon-box-shadow: 0 0 2px rgb(0 0 0 / 30%);
-  --spoiler-background: var(--fg-700);
-  --spoiler-color-visible: var(--fg-inverted);
+
   --code-background: rgb(0 0 0 / 25%);
   --code-background-inline: rgb(0 0 0 / 25%);
   --code-color: var(--fg-700);
-  --ins-background: var(--success-400);
+
+  --spoiler-background: var(--fg-700);
+  --spoiler-color-visible: var(--fg-inverted);
+
+  --ins-background: var(--green-400);
   --ins-color: var(--fg-inverted);
-  --del-background: var(--warning-400);
+
+  --del-background: var(--red-400);
   --del-color: var(--fg-inverted);
+
+  --caption-overlay-background: linear-gradient(0deg, rgb(0 0 0 / 70%), rgb(0 0 0 / 30%) 70%, transparent);
+  --caption-overlay-color: var(--fg-200);
+
+  --progress-bar-background: var(--navigation-background);
+  --progress-bar-color: var(--bg-200);
+
+  --skeleton-shape-color: var(--bg-300);
+  --skeleton-cutout-color: var(--page-bg-color);
+
+  --embed-background: var(--disabled-pattern);
+  --embed-box-shadow: var(--box-shadow-m);
+
+  --paragraph-spacing: 1.5rem;
+  --blockquote-background: rgb(0 0 0 / 15%);
+  --placeholder-background: var(--bg-950);
+  --kbd-background: var(--bg-900);
+  --infobox-background: var(--bg-900);
   --text-shadow: -1px -1px 1px rgb(0 0 0 / 12%);
   --checkmark-not-checked: var(--bg-950);
+  --tax-cloud-current: var(--primary-500);
+  --disabled-pattern: rgb(0 0 0 / 8%) repeating-linear-gradient(-45deg, rgb(0 0 0 / 8%), rgb(0 0 0 / 8%) 2px, transparent 2px, transparent 5px);
+  --invert-filter: invert(0);
+
+  // === LITRPG ================================================================
+
+  --litrpg-background: var(--bg-50);
+  --litrpg-color: var(--fg-inverted);
+  --litrpg-ins: var(--green-700);
+  --litrpg-del: var(--red-700);
+  --litrpg-polygon: polygon(8px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0 calc(100% - 8px), 0 8px);
+  --litrpg-drop-shadow: var(--drop-shadow-m);
 
   // === CONTENT LISTS =========================================================
 
@@ -130,12 +162,60 @@
   --primary-500: hsl(44deg 86% 70%);
   --primary-600: hsl(34deg 82% 70%);
 
-  --success-400: #9bd443;
-  --success-500: #78994d;
+  --yellow-100: #fee399;
+  --yellow-200: #fedc80;
+  --yellow-300: #fdd566;
+  --yellow-400: #fdce4d;
+  --yellow-500: #fdc733;
+  --yellow-600: #fcc01a;
+  --yellow-700: #fcb900;
+  --yellow-800: #e3a700;
+  --yellow-900: #ca9400;
 
-  --warning-400: #f96c6c;
-  --warning-500: #f15555;
-  --warning-600: #db4646;
+  --green-100: #aec294;
+  --green-200: #a1b882;
+  --green-300: #93ad71;
+  --green-400: #86a35f;
+  --green-500: #78994d;
+  --green-600: #6c8a45;
+  --green-700: #607a3e;
+  --green-800: #546b36;
+  --green-900: #485c2e;
+
+  --red-100: #f79999;
+  --red-200: #f58888;
+  --red-300: #f47777;
+  --red-400: #f26666;
+  --red-500: #f15555;
+  --red-600: #d94d4d;
+  --red-700: #c14444;
+  --red-800: #a93b3b;
+  --red-900: #913333;
+
+  --blue-100: #6ec9f2;
+  --blue-200: #56c0f0;
+  --blue-300: #3eb7ed;
+  --blue-400: #26aeeb;
+  --blue-500: #0ea5e9;
+  --blue-600: #0d95d2;
+  --blue-700: #0b84ba;
+  --blue-800: #0a73a3;
+  --blue-900: #08638c;
+
+  body {
+    --wp--preset--color--black: var(--fg-inverted);
+    // --wp--preset--color--cyan-bluish-gray: #abb8c3;
+    --wp--preset--color--white: var(--fg-100);
+    // --wp--preset--color--pale-pink: #f78da7;
+    --wp--preset--color--vivid-red: var(--red-400);
+    // --wp--preset--color--luminous-vivid-orange: #ff6900;
+    --wp--preset--color--luminous-vivid-amber: var(--yellow-400);
+    --wp--preset--color--light-green-cyan: var(--green-400);
+    // --wp--preset--color--vivid-green-cyan: #00d084;
+    // --wp--preset--color--pale-cyan-blue: #8ed1fc;
+    --wp--preset--color--vivid-cyan-blue: var(--blue-400);
+    // --wp--preset--color--vivid-purple: #9b51e0;
+  }
 
   // === BACKGROUNDS ===========================================================
 
@@ -215,7 +295,7 @@
 
   // --layout-color-lineart: var(--fg-800);
 
-  // --layout-collection-text: var(--fg-200);
+
 
   // === MINIMAL ===============================================================
 
@@ -244,49 +324,12 @@
   --card-label-color: var(--fg-inverted);
   --card-label-background: var(--fg-500);
   --card-unavailable-filter: grayscale(0.5);
-  --card-box-shadow: var(--box-shadow-m);
-
-  // === UNSORTED ==============================================================
-
-  // --disabled-pattern: rgb(0 0 0 / 8%) repeating-linear-gradient(-45deg, rgb(0 0 0 / 8%), rgb(0 0 0 / 8%) 2px, transparent 2px, transparent 5px);
-  // --disabled-embed-background: var(--disabled-pattern);
-  // --progress-bar-background: var(--navigation-background);
-  // --progress-bar-color: var(--fg-900);
-  // --media-button-color: var(--fg-600);
-  // --media-button-color-hover: var(--fg-500);
-  // --tax-cloud-current: var(--primary-500);
-
-
-
-
-
-
-
-  // --skeleton-shape-color: var(--fg-800);
-  // --skeleton-cutout-color: var(--e-1);
-  // --icon-text-font: inherit;
-
-  // --invert-filter: invert(0);
-  // --red: #ef4d4d;
-  // --litrpg-bg: var(--fg-400);
-  // --litrpg-fg: var(--fg-1000);
-  // --litrpg-ins: #363ea1;
-  // --litrpg-del: #be123c;
-  // --litrpg-drop-shadow: var(--container-drop-shadow);
-  // --lit-rpg-polygon: polygon(8px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0 calc(100% - 8px), 0 8px);
 
   // === FOCUS =================================================================
 
   --focus-border-color: #ef4d4d;
   --focus-outline: 2px solid var(--focus-border-color);
-  // --focus-box-shadow: inset 0 0 0px 3px rgb(0 0 0 / 75%);
-  // --focus-box-shadow-small: inset 0 0 0px 2px rgb(0 0 0 / 75%);
-
-  // === ELEVATIONS ============================================================
-  // --e-fullscreen: var(--e-1);
-
-  // --e-1: var(--bg-800);
-  // --e-overlay: var(--bg-1000);
+  --focus-box-shadow: inset 0 0 0 2px rgb(0 0 0 / 75%);
 
   // === NAVIGATION ============================================================
 
@@ -333,18 +376,20 @@
   --modal-bg-color: var(--bg-600);
 
   // === SHADOWS ===============================================================
-  // --floating-shadow: 0 0 16px 4px rgb(0 0 0 / 30%), 1px 1px 0 0 rgb(255 255 255 / 1%) inset;
-  // --container-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
-  // --container-box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%), 0 1px 2px -1px rgb(0 0 0 / 10%);
-  // --figure-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.12)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.1));
-  // --caption-overlay-shadow: linear-gradient(0deg, rgb(0 0 0 / 70%), rgb(0 0 0 / 30%) 70%, transparent);
-  // --embed-box-shadow: 0 0 2px rgb(0 0 0 / 30%);
 
   --box-shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 10%);
   --box-shadow-s: 0 1px 3px 0 rgb(0 0 0 / 12%), 0 1px 2px -1px rgb(0 0 0 / 10%);
   --box-shadow: 0 3px 6px -1px rgb(0 0 0 / 9%), 0 -1px 4px -2px rgb(0 0 0 / 10%);
   --box-shadow-m: rgb(0 0 0 / 15%) 0px 2px 5px 0px, rgb(0 0 0 / 5%) 0px 1px 1px 0px;
   --box-shadow-l: rgb(0 0 0 / 10%) 0px 6px 12px -2px, rgb(0 0 0 / 15%) 0px 3px 7px -3px;
+  --box-shadow-xl: 0 3px 8px -1px rgb(0 0 0 / 9%), 0 3px 12px -1px rgb(0 0 0 / 17%);
+
+  --drop-shadow-xs: drop-shadow(0 1px 2px rgb(0 0 0 / 10%));
+  --drop-shadow-s: drop-shadow(0 1px 3px rgb(0 0 0 / 12%)) drop-shadow(0 1px 2px rgb(0 0 0 / 10%));
+  --drop-shadow: drop-shadow(0 2px 6px rgb(0 0 0 / 9%)) drop-shadow(0 -1px 3px rgb(0 0 0 / 10%));
+  --drop-shadow-m: drop-shadow(0 2px 5px rgb(0 0 0 / 15%)) drop-shadow(0 1px 1px rgb(0 0 0 / 5%));
+  --drop-shadow-l: drop-shadow(0 5px 11px rgb(0 0 0 / 10%)) drop-shadow(0 2px 6px rgb(0 0 0 / 15%));
+  --drop-shadow-xl: drop-shadow(0 3px 8px rgb(0 0 0 / 9%)) drop-shadow(0 3px 12px rgb(0 0 0 / 17%));
 
   // === MOBILE MENU ===========================================================
   // --mobile-menu-background: var(--e-1);
@@ -356,9 +401,6 @@
   // --mobile-menu-bookmark-progress-background: rgb(0 0 0 / 40%);
   // --mobile-menu-current-chapter-text: var(--fg-400);
   // --mobile-menu-current-chapter-background: rgb(0 0 0 / 25%);
-
-  // === CONTENT ===============================================================
-  // --blockquote-background: rgb(0 0 0 / 15%);
 
   // === TABLES ================================================================
   // --table-border-color: var(--fg-900);
@@ -412,17 +454,18 @@
   --inline-link-color-border-hover: 1px solid currentColor;
 
   // === COLORS - BOOKMARKS ====================================================
-  // --bookmark-color-alpha: var(--fg-900);
-  // --bookmark-color-beta: #e06552;
-  // --bookmark-color-gamma: #77BFA3;
-  // --bookmark-color-delta: #3C91E6;
-  // --bookmark-line: var(--primary-500);
-  // --bookmark-button-text-active-alpha: var(--fg-1000);
-  // --bookmark-button-text-active-beta: var(--fg-1000);
-  // --bookmark-button-text-active-gamma: var(--fg-1000);
-  // --bookmark-button-text-active-delta: var(--fg-1000);
-  // --bookmark-progress-opacity: .15;
-  // --bookmark-progress-mobile-opacity: .75;
+
+  --bookmark-color-alpha: var(--fg-900);
+  --bookmark-color-beta: #e06552;
+  --bookmark-color-gamma: #77BFA3;
+  --bookmark-color-delta: #3C91E6;
+  --bookmark-line: var(--primary-500);
+  --bookmark-button-text-active-alpha: var(--fg-inverted);
+  --bookmark-button-text-active-beta: var(--fg-inverted);
+  --bookmark-button-text-active-gamma: var(--fg-inverted);
+  --bookmark-button-text-active-delta: var(--fg-inverted);
+  --bookmark-progress-opacity: .15;
+  --bookmark-progress-mobile-opacity: .75;
 
   // === BUTTONS - GENERAL =====================================================
 
@@ -457,8 +500,8 @@
 
   // === BUTTONS - WARNING ======================================================
 
-  --button-warning-background: var(--warning-500);
-  --button-warning-background-hover: var(--warning-600);
+  --button-warning-background: var(--red-500);
+  --button-warning-background-hover: var(--red-600);
   --button-warning-color: #fff;
   --button-warning-color-hover: #fff;
 
@@ -518,9 +561,9 @@
 
   --notice-default-background: var(--bg-50);
   --notice-default-color: var(--fg-inverted);
-  --notice-warning-background: var(--warning-500);
+  --notice-warning-background: var(--red-500);
   --notice-warning-color: #fff;
-  --notice-success-background: var(--success-500);
+  --notice-success-background: var(--green-500);
   --notice-success-color: #fff;
   --notice-box-shadow: var(--box-shadow-l);
 
@@ -573,17 +616,17 @@
   .selected-paragraph {
     --paragraph-selection-background: rgb(255 255 255 / 10%);
     --paragraph-tools-filter: drop-shadow(0 1px 4px rgb(0 0 0 / 33%));
-    // --button-bookmark-background-active: var(--primary-500);
+    --button-bookmark-background-active: var(--primary-500);
   }
 
   .tts-interface {
-    // --tts-background: var(--e-overlay);
-    // --tts-button-active-background: var(--primary-500);
-    // --tts-button-active-text: var(--fg-1000);
+    --tts-background: var(--bg-950);
+    --tts-button-active-background: var(--primary-500);
+    --tts-button-active-text: var(--fg-inverted);
   }
 
   .current-reading {
-    // --tts-current-reading-background: rgb(255 255 255 / 5%);
+    --tts-current-reading-background: rgb(255 255 255 / 5%);
   }
 
   .toggle {
